modules/gdscript/tests/scripts/analyzer/errors/typed_array_assignment.gd
func test():
	final arr: Array[int] = ["Hello", "World"]
